fix typos in styling

--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -398,7 +398,7 @@ hr {
     height: 500px;
     object-fit: cover;
     transform: scale(1);
-    trnasition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 .modal-img:hover {
@@ -424,7 +424,7 @@ hr {
 .mbc_content-hover {
     z-index: 1;
     position: absolute;
-    whie-space: nowrap;
+    white-space: nowrap;
     display: none;
     padding: 1rem;
     background: $white;
@@ -578,7 +578,7 @@ input[type=submit]:hover {
     }
 
     .topnav.responsive {
-        positoin: relative;
+        position: relative;
     }
 
     .topnav.responsive a.icon {
