--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -231,6 +231,10 @@ hr {
     background-image: url('https://miro.medium.com/v2/resize:fit:720/format:webp/1*_NVBTVdmjt3Qvq3CZOySXg.png');
 }
 
+#project7 {
+    background-image: url("/assets/timeToTalk-itchioCoverArtboard-1.png");
+}
+
 /*-- project square content --*/
 .is-active {
     position: absolute;
