adding newproject cards

--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -235,6 +235,14 @@ hr {
     background-image: url("/assets/timeToTalk-itchioCoverArtboard-1.png");
 }
 
+#project8 {
+    background-image: url('/assets/cartridgecollector.JPG');
+}
+
+#project9 {
+    background-image: url('/assets/ghost01.JPG');
+}
+
 /*-- project square content --*/
 .is-active {
     position: absolute;
