--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -227,10 +227,10 @@ hr {
 
 }
 
-#project6 {
+/* #project6 {
     background-image: url('https://miro.medium.com/v2/resize:fit:720/format:webp/1*_NVBTVdmjt3Qvq3CZOySXg.png');
 }
-
+ */
 #project7 {
     background-image: url("/assets/timeToTalk-itchioCoverArtboard-1.png");
 }
