--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -255,10 +255,10 @@ hr {
   background-image: url("https://optim.tildacdn.one/tild6238-3035-4335-a333-306335373139/-/resize/760x/-/format/webp/IMG_3349.jpg");
 }
 
-#project6 {
-  background-image: url("https://miro.medium.com/v2/resize:fit:720/format:webp/1*_NVBTVdmjt3Qvq3CZOySXg.png");
+/* #project6 {
+    background-image: url('https://miro.medium.com/v2/resize:fit:720/format:webp/1*_NVBTVdmjt3Qvq3CZOySXg.png');
 }
-
+ */
 #project7 {
   background-image: url("/assets/timeToTalk-itchioCoverArtboard-1.png");
 }
