--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -497,8 +497,8 @@ hr {
 }
 
 .modal-img:hover {
-  -webkit-transform: scale 1.05;
-          transform: scale 1.05;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 /*modal body captions*/
