--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -270,6 +270,10 @@ hr {
   background-image: url("/assets/ghost01.JPG");
 }
 
+#project10 {
+  background-image: url("/assets/code/android-code.jpg");
+}
+
 /*-- project square content --*/
 .is-active {
   position: absolute;
