--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -242,6 +242,9 @@ hr {
 #project9 {
     background-image: url('/assets/ghost01.JPG');
 }
+#project10{
+    background-image: url('/assets/code/android-code.jpg');
+}
 
 /*-- project square content --*/
 .is-active {
