--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -16,11 +16,18 @@ body {
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
+  color: #230f44;
 }
 
 a {
   text-decoration: none;
-  color: black;
+  color: #230f44;
+}
+
+a:hover {
+  text-decoration: underline;
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
 }
 
 button {
