--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -281,6 +281,10 @@ hr {
   background-image: url("/assets/code/android-code.jpg");
 }
 
+#project11 {
+  background-image: url("https://images.pexels.com/photos/1294886/pexels-photo-1294886.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+}
+
 /*-- project square content --*/
 .is-active {
   position: absolute;
@@ -456,7 +460,7 @@ hr {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow-y: hidden;
   background-color: rgba(0, 0, 0, 0.4);
   /*black with low opacity*/
 }
@@ -477,7 +481,7 @@ hr {
 .modal-content {
   position: relative;
   background-color: #f8f7fc;
-  margin: auto;
+  margin: 5px auto;
   padding: 0;
   border: 1px solid #888;
   width: 80%;
@@ -498,7 +502,7 @@ hr {
 
 .modal-img {
   width: 100%;
-  height: 500px;
+  height: 350px;
   -o-object-fit: cover;
      object-fit: cover;
   -webkit-transform: scale(1);
