--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -254,6 +254,10 @@ hr {
     background-image: url('/assets/code/android-code.jpg');
 }
 
+#project11 {
+    background-image: url('https://images.pexels.com/photos/1294886/pexels-photo-1294886.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+}
+
 /*-- project square content --*/
 .is-active {
     position: absolute;
@@ -379,7 +383,7 @@ hr {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow-y: hidden;
     background-color: rgba(0, 0, 0, 0.4);
     /*black with low opacity*/
 }
@@ -400,7 +404,7 @@ hr {
 .modal-content {
     position: relative;
     background-color: $white;
-    margin: auto;
+    margin: 5px auto;
     padding: 0;
     border: 1px solid #888;
     width: 80%;
@@ -418,7 +422,7 @@ hr {
 
 .modal-img {
     width: 100%;
-    height: 500px;
+    height: 350px;
     object-fit: cover;
     transform: scale(1);
     transition: all 0.3s ease-in-out;
