--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -216,13 +216,6 @@ hr {
   height: 300px;
   text-align: center;
   overflow: hidden;
-  position: relative;
-  -webkit-transition: -webkit-transform 0.65s;
-  transition: -webkit-transform 0.65s;
-  transition: transform 0.65s;
-  transition: transform 0.65s, -webkit-transform 0.65s;
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
   cursor: pointer;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -270,9 +263,10 @@ hr {
   background-image: url("/assets/timeToTalk-itchioCoverArtboard-1.png");
 }
 
-/* #project8 {
-    background-image: url('/assets/cartridgecollector.JPG');
-} */
+#project8 {
+  background-image: url("/assets/cartridgecollector.JPG");
+}
+
 #project9 {
   background-image: url("/assets/ghost01.JPG");
 }
@@ -293,13 +287,21 @@ hr {
 .item_content {
   background-color: #a189c7;
   position: absolute;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-transform: rotateY(180deg);
-          transform: rotateY(180deg);
-  display: none;
   padding: 40px 80px;
   border-radius: 40px;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-transform: 50 50;
+          transform: 50 50;
+  -webkit-transition: -webkit-transform 1s 0s;
+  transition: -webkit-transform 1s 0s;
+  transition: transform 1s 0s;
+  transition: transform 1s 0s, -webkit-transform 1s 0s;
+}
+
+.card:hover > .item_content {
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 /*back of card*/
