fix rouyn modal buttons

--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -33,11 +33,11 @@ a {
     text-decoration: none;
     color: $darkModeBg;
 
-    /* &:hover {
+    &:hover {
         text-decoration: underline;
         transform: scale(1.05);
         font-weight: 600;
-    } */
+    } 
 }
 
 
