--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -22,11 +22,13 @@ body {
 a {
   text-decoration: none;
   color: #230f44;
-  /* &:hover {
-        text-decoration: underline;
-        transform: scale(1.05);
-        font-weight: 600;
-    } */
+}
+
+a:hover {
+  text-decoration: underline;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  font-weight: 600;
 }
 
 button {
