--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -284,6 +284,10 @@ hr {
   background-image: url("https://images.pexels.com/photos/196645/pexels-photo-196645.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 }
 
+#project13 {
+  background-image: url("https://images.pexels.com/photos/273230/pexels-photo-273230.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+}
+
 /*-- project square content --*/
 .is-active {
   position: absolute;
