--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -37,6 +37,7 @@ a {
         text-decoration: underline;
         transform: scale(1.05);
         font-weight: 600;
+        background-color: $lilac;
     }
 }
 
