--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -629,7 +629,7 @@ input[type=submit]:hover {
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: white;
+  color: #230f44;
   font-weight: bold;
   font-size: 18px;
   -webkit-transition: 0.6s ease;
@@ -652,7 +652,7 @@ input[type=submit]:hover {
 }
 
 .slideText {
-  color: #f2f2f2;
+  color: #230f44;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
@@ -662,7 +662,7 @@ input[type=submit]:hover {
 }
 
 .slideNumbertext {
-  color: #f2f2f2;
+  color: #230f44;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
