--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -553,7 +553,7 @@ input[type=submit]:hover {
     width: auto;
     margin-top: -22px;
     padding: 16px;
-    color: white;
+    color: $darkModeBg;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
@@ -572,7 +572,7 @@ input[type=submit]:hover {
 }
 
 .slideText {
-    color: #f2f2f2;
+    color: $darkModeBg;
     font-size: 15px;
     padding: 8px 12px;
     position: absolute;
@@ -582,7 +582,7 @@ input[type=submit]:hover {
 }
 
 .slideNumbertext {
-    color: #f2f2f2;
+    color: $darkModeBg;
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
