--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -404,7 +404,7 @@ hr {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow-y: hidden;
+    overflow-y:scroll;
     background-color: rgba(0, 0, 0, 0.4);
     /*black with low opacity*/
 }
