--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -282,6 +282,9 @@ table,th,td{
 #project15{
     background-image: url('/assets/art/ella-collab/kitchen.jpg');
 }
+#project16{
+    background-image: url('/assets/code/javadrawingapp.jpg');
+}
 
 /*-- project square content --*/
 .is-active {
