--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -285,6 +285,9 @@ table,th,td{
 #project16{
     background-image: url('/assets/code/javadrawingapp.jpg');
 }
+#project17{
+    background-image: url('/assets/art/layouts/layout5.jpg');
+}
 
 /*-- project square content --*/
 .is-active {
