--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -288,6 +288,9 @@ table,th,td{
 #project17{
     background-image: url('/assets/art/layouts/layout5.jpg');
 }
+#project18{
+    background-image: url('/assets/code/react-appThumbnail.jpg');
+}
 
 /*-- project square content --*/
 .is-active {
