--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -168,6 +168,18 @@ table, th, td {
   font-weight: 700;
 }
 
+.top-banner_desc {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 500;
+  margin: 15px 5px 0 5px;
+}
+
+/*filter tabs*/
+#portfolio-filters {
+  list-style-type: none;
+}
+
 /*--- END OF SITE HEADER ---*/
 /*--- TABS AND TAB CONTENT*/
 .topnav button {
