make new links, try to get active proj filters to work (it did not)

--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -187,7 +187,8 @@ table, th, td {
 }
 
 .topnav button:hover,
-.topnav button.active {
+.topnav button.active,
+.filter-active {
   color: #bba6de;
   background-color: #7b4899;
   font-size: 17px;
