project tab hilight kinda works.
will not unhilight when i go on separate tab though

--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -134,7 +134,7 @@ table,th,td{
 }
 
 /*tab class*/
-.topnav a {
+.topnav button {
     float: left;
     text-align: center;
     text-decoration: none;
