--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -42,7 +42,9 @@ hr {
   border-color: #7b4899;
 }
 
-table, th, td {
+table,
+th,
+td {
   border-color: #230f44;
   border: 2px solid;
   border-collapse: collapse;
@@ -79,7 +81,7 @@ table, th, td {
   background-color: #926FCF;
 }
 
-.darkMode .topnav a button {
+.darkMode .topnav button {
   color: #f8f7fc;
 }
 
@@ -847,14 +849,15 @@ input[type=submit]:hover {
 
 /*--- END OF FOOTER ---*/
 /*--- RESPONSIVENESS ---*/
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 650px) {
   /*--- TOP NAV BAR---*/
-  .topnav a:not(:first-child) {
+  .topnav button {
     display: none;
   }
   .topnav a.icon {
     float: right;
     display: block;
+    font-size: 50px;
   }
   .topnav.responsive {
     position: relative;
@@ -864,10 +867,17 @@ input[type=submit]:hover {
     right: 0;
     top: 0;
   }
-  .topnav.responsive a {
+  .topnav.responsive button {
     float: none;
     display: block;
     text-align: left;
+  }
+  .dog {
+    width: 200px;
+    height: 200px;
+  }
+  .top-banner_name {
+    font-size: 22px;
   }
   /*--- PROJECT GRID ---*/
   #project-grid {
@@ -926,6 +936,16 @@ input[type=submit]:hover {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .dog {
+    width: 100px;
+    height: 100px;
+  }
+  .top-banner_name {
+    font-size: 20px;
   }
 }
 
