--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -52,9 +52,11 @@ hr {
     border-color: $darkpinkpurple;
 }
 
-table,th,td{
-    border-color:$darkModeBg;
-    border:2px solid;
+table,
+th,
+td {
+    border-color: $darkModeBg;
+    border: 2px solid;
     border-collapse: collapse;
     background-color: $lilac;
 }
@@ -89,7 +91,7 @@ table,th,td{
     background-color: $darkModeBgMountains;
 }
 
-.darkMode .topnav a button {
+.darkMode .topnav button {
     color: $white;
 }
 
@@ -163,16 +165,19 @@ table,th,td{
     font-size: 30px;
     font-weight: 700;
 }
-.top-banner_desc{
-    text-align:center;
+
+.top-banner_desc {
+    text-align: center;
     font-size: 20px;
     font-weight: 500;
-    margin:15px 5px 0 5px;
+    margin: 15px 5px 0 5px;
 }
+
 /*filter tabs*/
-#portfolio-filters{
-    list-style-type:none;
+#portfolio-filters {
+    list-style-type: none;
 }
+
 /*--- END OF SITE HEADER ---*/
 
 /*--- TABS AND TAB CONTENT*/
@@ -182,7 +187,7 @@ table,th,td{
 
 .topnav button:hover,
 .topnav button.active,
-.filter-active{
+.filter-active {
     color: $lilac;
     background-color: $darkpinkpurple;
     font-size: 17px;
@@ -290,16 +295,19 @@ table,th,td{
     background-image: url('/assets/ux/peezyFindMoodboard.jpg');
 }
 
-#project15{
+#project15 {
     background-image: url('/assets/art/ella-collab/kitchen.jpg');
 }
-#project16{
+
+#project16 {
     background-image: url('/assets/code/javadrawingapp.jpg');
 }
-#project17{
+
+#project17 {
     background-image: url('/assets/art/layouts/layout5.jpg');
 }
-#project18{
+
+#project18 {
     background-image: url('/assets/code/react-appThumbnail.jpg');
 }
 
@@ -427,14 +435,14 @@ table,th,td{
 
 /*--- MODAL ---*/
 .modal {
-    height:100%;
+    height: 100%;
     display: none;
     position: absolute;
     z-index: 1;
     padding: 100px 15px;
     left: 0;
     top: 0;
-    overflow-y:scroll;
+    overflow-y: scroll;
     background-color: rgba(0, 0, 0, 0.55);
     /*black with low opacity*/
 }
@@ -732,16 +740,18 @@ input[type=submit]:hover {
 /*--- END OF FOOTER ---*/
 
 /*--- RESPONSIVENESS ---*/
-@media screen and (max-width:700px) {
+
+@media screen and (max-width:650px) {
 
     /*--- TOP NAV BAR---*/
-    .topnav a:not(:first-child) {
+    .topnav button{
         display: none;
     }
 
     .topnav a.icon {
         float: right;
         display: block;
+        font-size:50px;
     }
 
     .topnav.responsive {
@@ -754,10 +764,19 @@ input[type=submit]:hover {
         top: 0;
     }
 
-    .topnav.responsive a {
+    .topnav.responsive button {
         float: none;
         display: block;
         text-align: left;
+    }
+
+    .dog {
+        width: 200px;
+        height: 200px;
+    }
+
+    .top-banner_name {
+        font-size: 22px;
     }
 
     /*--- PROJECT GRID ---*/
@@ -798,6 +817,16 @@ input[type=submit]:hover {
     }
 }
 
-@media screen and (max-width: 400px) {}
+@media screen and (max-width: 375px) {
+
+    .dog {
+        width: 100px;
+        height: 100px;
+    }
+
+    .top-banner_name {
+        font-size: 20px;
+    }
+}
 
 /*--- END OF RESPONSIVENESS ---*/
