--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -849,7 +849,7 @@ input[type=submit]:hover {
 
 /*--- END OF FOOTER ---*/
 /*--- RESPONSIVENESS ---*/
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 700px) {
   /*--- TOP NAV BAR---*/
   .topnav button {
     display: none;
@@ -857,20 +857,20 @@ input[type=submit]:hover {
   .topnav a.icon {
     float: right;
     display: block;
-    font-size: 50px;
+    font-size: 40px;
+    top: 10px;
   }
   .topnav.responsive {
     position: relative;
   }
   .topnav.responsive a.icon {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: 5px;
+    top: 5px;
   }
   .topnav.responsive button {
     float: none;
     display: block;
-    text-align: left;
   }
   .dog {
     width: 200px;
