--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -757,21 +757,28 @@ input[type=submit]:hover {
 
     .topnav.responsive {
         position: relative;
+        background-color: $lilactopnav;
+        z-index: 1;
     }
 
     .topnav.responsive a.icon {
         position: absolute;
         right: 5px;
         top: 5px;
+        z-index: 1;
     }
 
     .topnav.responsive button {
         float: none;
         display: block;
     }
+    #portfolio-filters .tablinks, #portfolio-filters .designbtn{
+        font-size:22px;
+    }
     .dog {
         width: 200px;
         height: 200px;
+        z-index:0;
     }
 
     .top-banner_name {
