another topfunc test failed but i'm gonna triy to make a button that takes us back to ttop based on this codepen (also w3schools)

--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -802,6 +802,7 @@ input[type=submit]:hover {
 }
 
 /*--- END OF MODAL ---*/
+/*--- SCROLL BUTTON ---*/
 /*--- FOOTER ---*/
 .footer {
   display: -webkit-box;
