--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -703,6 +703,11 @@ input[type=submit]:hover {
 
 /*--- END OF MODAL ---*/
 
+/*--- SCROLL BUTTON ---*/
+.scroll{
+    
+}
+
 /*--- FOOTER ---*/
 .footer {
     display: flex;
