add in project square for millie game

--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -332,7 +332,7 @@ td {
 }
 
 #project19 {
-  background-image: url("/assets/code/");
+  background-image: url("/assets/code/milliegame-screenshot.JPG");
 }
 
 /*-- project square content --*/
