--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -482,7 +482,7 @@ td {
 
 .modal-body {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto;
 }
 
 .modal-img {
