--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -314,6 +314,9 @@ td {
 #project19{
     background-image:url('/assets/code/milliegame-screenshot.JPG');
 }
+#project20{
+    background-image:url('/assets/art/NOLA/NOLA-ghostsBG.png');
+}
 
 /*-- project square content --*/
 .is-active {
