--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -443,6 +443,7 @@ td {
 /*--- MODAL ---*/
 .modal {
     height: 100%;
+    width: 100%;
     display: none;
     position: absolute;
     z-index: 1;
