add in hole face assets with new project card

--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -317,6 +317,9 @@ td {
 #project20{
     background-image:url('/assets/art/NOLA/NOLA-ghostsBG.png');
 }
+#project21{
+    background-image: url('/assets/art/hole-face/hole-face.png');
+}
 
 /*-- project square content --*/
 .is-active {
