--- a/styling/sassStyles.css
+++ b/styling/sassStyles.css
@@ -339,6 +339,10 @@ td {
   background-image: url("/assets/art/NOLA/NOLA-ghostsBG.png");
 }
 
+#project21 {
+  background-image: url("/assets/art/hole-face/hole-face.png");
+}
+
 /*-- project square content --*/
 .is-active {
   position: absolute;
