--- a/styling/sassStyles.scss
+++ b/styling/sassStyles.scss
@@ -444,7 +444,7 @@ td {
 }
 
 /*--- MODAL ---*/
-.modal {
+.modal,.secondModal {
     height: 100%;
     width: 100%;
     display: none;
@@ -473,7 +473,7 @@ td {
     font-weight: 600;
 }
 
-.modal-content {
+.modal-content,.secondModal_content {
     position: relative;
     background-color: $white;
     margin: 5px auto;
@@ -487,7 +487,7 @@ td {
     animation-duration: 0.4s;
 }
 
-.modal-body {
+.modal-body,.secondModal_body {
     display: grid;
     grid-template-columns: auto;
 }
